# TegritySpy

./: CMakeLists.txt  LICENSE  README.md  SpyMain.cpp  SpyMain.rc  resource.h
